--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')
   </script>
   <script src="js/plugins.js"></script>
-  <script src="js/main.js"></script>
+  <script src="js/exo1.js"></script>
   <script src="js/bootstrap.js"></script>
   <script src="https://use.fontawesome.com/a0c828b765.js"></script>
   <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
