Adding css link to index.html

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/exo1.css">
-  <script src="js/vendor/modernizr-2.8.3.min.js"></script>
+  <script src="js/exo1.js"></script>
 </head>
 <body>
   <!--[if lt IE 8]>
